# HireRank

./: .env.example  .gitignore  .pre-commit-config.yaml  compose.ci.yml  compose.override.yml  compose.yml  main.py  package-lock.json  package.json
backend/: .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py  models.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/routers/: __init__.py  admin.py  auth.py  candidates.py  dashboard.py  users.py  (+2 more)
backend/app/core/: config.py  exceptions.py  security.py  tenancy.py
backend/app/db/: session.py
backend/app/integrations/ai/: __init__.py  client.py  ranking.py
backend/app/models/: candidate.py  enterprise.py  notification.py  refresh_token.py  user.py  vacancy.py
backend/app/repositories/: auth.py  candidates.py  dashboard.py  enterprises.py  notifications.py  users.py  vacancies.py
backend/app/schemas/: auth.py  candidate.py  common.py  dashboard.py  notification.py  user.py  vacancy.py
backend/app/services/: auth.py  candidates.py  dashboard.py  enterprises.py  notifications.py  ranking.py  users.py  vacancies.py
backend/app/tasks/: notifications.py  ranking.py
backend/scripts/: prestart.sh
backend/tests/: conftest.py
backend/tests/api/routes/: test_login.py  test_users.py
backend/tests/contract/: conftest.py  test_api_contract.py  test_openapi_contract.py
backend/tests/factories/: __init__.py
backend/tests/fixtures/: __init__.py
backend/tests/tasks/: __init__.py
(+178 files in other folders)
